# edgar-mcp

./: .gitlab-ci.yml  README.md  pyproject.toml
skills/forensic-deep-dive/: SKILL.md
src/edgar_mcp/: dossier.py  forensic.py  server.py  taxonomy.py  util.py
src/fundamentalsmcp/: analytics.py  dossier.py  forensic.py  server.py
tests/: live_smoke.py
