[project]
name = "edgar-mcp"
version = "0.1.0"
description = "Deep, structured MCP access to SEC EDGAR: layered XBRL fact/definition/calc-tree tooling, section extraction, full-text search, insider parsing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edgartools>=5.40.1",
    "httpx>=0.28.1",
    "mcp>=1.9",
]

[project.scripts]
edgar-mcp = "edgar_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
